--- a/index.html
+++ b/index.html
@@ -35,33 +35,47 @@
    </div>
   </div>
  </div>
-
- <section class="hero-section">
+ <section class="hero-section py-5 px-4">
   <div class="container-fluid">
    <div class="row">
-    <div class="col-md-6 text-light">
-     <h4>HOME DELIVERY</h4>
+    <div class="col-md-7 text-light mt-5  home-wrap">
+     <p class="fs-5" style="color: tomato;">HOME DELIVERY</p>
      <h1 class="fw-semibold text-light" style="font-size: 4rem;">Great Tasting Pizza</h1>
-     <p class="text-grey">
+     <p class="grey">
       Etiam quis lobortis odio, at efficitur quam mattis sodales mauris. Morbi fermentum pretium ligula, id efficitur
       quam mattis in. Fusce nec pretium ante. Vivamus vitae bibendum lacus, ac varius ligula. Duis at faucibus ligula,
       quis dignissim libero.
      </p>
+     <div class="table-wrap d-flex align-items-center gap-4">
+      <a href="">
+       <div class="btn-danger p-3 rounded-2 book-btn fw-bolder  ">BOOK A TABLE</div>
+      </a>
+      <p class="text-light fw-bolder text-decoration-underline fs-4 ">+ 00 123 432</p>
+     </div>
+     <div class="home-socials text-light mt-5">
+      <p class="fs-5 fw-bolder">join us on our social media:</p>
+      <div class="socials d-flex gap-3">
+       <i class="fab fa-instagram"></i>
+       <i class="fab fa-facebook"></i>
+       <i class="fab fab fa-twitter"></i>
+       <i class="fab fab fa-youtube"></i>
+      </div>
+     </div>
     </div>
 
    </div>
   </div>
  </section>
- <header class="header bg-black d-flex justify-content-between p-3 position-absolute w-100 top-50">
+ <header class="header bg-transparent d-flex justify-content-between p-3 w-100 px-4">
   <div class="brand-logo">
    <h1 class="text-light text-decoration-none">Yunmi</h1>
   </div>
-  <div class="head-right d-flex align-items-center justify-content-evenly gap-2">
+  <div class="head-right d-flex align-items-center justify-content-evenly gap-4">
    <a href="">
-    <i class="fa fa-search"></i>
+    <i class="fa fa-search text-light"></i>
    </a>
    <a href="">
-    <i class="fa fas fa-shopping-bag"></i>
+    <i class="fa fas fa-shopping-bag text-light"></i>
    </a>
    <div class="btn bg-gradient" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
     aria-controls="staticBackdrop">
@@ -81,6 +95,34 @@
    </div>
   </div>
  </header>
+ <section class="menu-small bg-black px-4 py-5">
+  <div class="container-fluid">
+   <div class="row">
+    <p class="text-center">mouth watering</p>
+    <h2 class="text-center">Chef's Special Menu's</h2>
+    <div class="col-md-3">
+     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
+     <h2 class="text-center">Coffee</h2>
+     <p class="text-center">8 varieties</p>
+    </div>
+    <div class="col-md-3">
+     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
+     <h2 class="text-center">Coffee</h2>
+     <p class="text-center">8 varieties</p>
+    </div>
+    <div class="col-md-3">
+     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
+     <h2 class="text-center">Coffee</h2>
+     <p class="text-center">8 varieties</p>
+    </div>
+    <div class="col-md-3">
+     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
+     <h2 class="text-center">Coffee</h2>
+     <p class="text-center">8 varieties</p>
+    </div>
+   </div>
+  </div>
+ </section>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
 "></script>
  <script src="./assets/js/all.min.js"></script>
