finished the small menu...

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="container-fluid">
    <div class="row">
     <div class="col-md-7 text-light mt-5  home-wrap">
-     <p class="fs-5" style="color: tomato;">HOME DELIVERY</p>
+     <p class="fs-5" style="color: #f88400;">HOME DELIVERY</p>
      <h1 class="fw-semibold text-light" style="font-size: 4rem;">Great Tasting Pizza</h1>
      <p class="grey">
       Etiam quis lobortis odio, at efficitur quam mattis sodales mauris. Morbi fermentum pretium ligula, id efficitur
@@ -98,28 +98,32 @@
  <section class="menu-small bg-black px-4 py-5">
   <div class="container-fluid">
    <div class="row">
-    <p class="text-center">mouth watering</p>
-    <h2 class="text-center">Chef's Special Menu's</h2>
-    <div class="col-md-3">
-     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
-     <h2 class="text-center">Coffee</h2>
-     <p class="text-center">8 varieties</p>
+    <p class="text-center fs-5" style="color: #f88400;">mouth watering</p>
+    <h2 class="text-center fs-2 text-light mb-4">Chef's Special Menu's</h2>
+    <div class="d-flex justify-content-evenly">
+     <div class=" bg-dark p-3 h-100 ">
+      <img src="./assets/images/pexels-valeriya-1639557.jpg" alt="" class="w-100  object-fit-cover mb-3 m-img ">
+      <h2 class="text-center text-light">Burger</h2>
+      <p class="text-center" style="color: #f88400;">8+ varieties</p>
+     </div>
+     <div class=" bg-dark p-3 h-100 ">
+      <img src="./assets/images/pexels-enginakyurt-1672304.jpg" alt="" class=" w-100  object-fit-cover mb-3 m-img">
+      <h2 class="text-center text-light">Beer</h2>
+      <p class="text-center" style="color: #f88400;">20+ varieties</p>
+     </div>
+     <div class=" bg-dark p-3 h-100 ">
+      <img src="./assets/images/pexels-narda-yescas-724842-1566837.jpg" alt=""
+       class="w-100  object-fit-cover mb-3 m-img">
+      <h2 class="text-center text-light">Pizza</h2>
+      <p class="text-center" style="color: #f88400;">10+ varieties</p>
+     </div>
+     <div class=" bg-dark p-3 h-100 ">
+      <img src="./assets/images/pexels-igrejapreta-2433979.jpg" alt="" class=" w-100  object-fit-cover mb-3 m-img">
+      <h2 class="text-center text-light">Pasta</h2>
+      <p class="text-center" style="color: #f88400;">30+ varieties</p>
+     </div>
     </div>
-    <div class="col-md-3">
-     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
-     <h2 class="text-center">Coffee</h2>
-     <p class="text-center">8 varieties</p>
-    </div>
-    <div class="col-md-3">
-     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
-     <h2 class="text-center">Coffee</h2>
-     <p class="text-center">8 varieties</p>
-    </div>
-    <div class="col-md-3">
-     <img src="./assets/images/pexels-fariphotography-905847.jpg" alt="" class="w-100">
-     <h2 class="text-center">Coffee</h2>
-     <p class="text-center">8 varieties</p>
-    </div>
+
    </div>
   </div>
  </section>
